# income-summary

./: .gitignore  Makefile  Pipfile  README.md  income_summarizer.py  main.py  pyproject.toml  test_categorize_transaction.py  test_parse_transaction.py  transaction.py  transaction_category.py
.github/workflows/: ci-flow.yml
tests/: context.py  test_categorize_transaction.py  test_parse_transaction.py
