[project]
name = "income-summary"
version = "0.1.0"
description = "A CLI tool that can process pdf statements and summarize and aggregate data"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "pdfplumber>=0.11.5",
]

[dependency-groups]
test = [
    "mypy>=1.15.0",
    "pylint>=3.3.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
